@@ -12,6 +12,13 @@
     * new 'foldermode' option to change folder panel view.
     * add *-javascript* flag to [c]:abbreviate[c], [c]:iabbrev[c] and [c]:cabbrev[c].
     * More small fixes
+    * IMPORTANT: It is possible to yank more fields now, but it destroies previous key bindings.
+      [m]ya[m] or [m]yy[m] to copy Author
+      [m]ys[m] to copy Subject
+      [m]y#[m] to copy Message ID
+      [m]yr[m] to copy recipients, only To:
+      [m]yR[m] to copy recipients, To: + Cc:
+      [m]yu[m] to copy URL of feed (only for RSS)
 
 2010-03-29
     * version 0.6
